Atualização dos serviços e repositórios de Barco, ajuste no contexto de aplicação e testes

--- a/CP3.API/appsettings.json
+++ b/CP3.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "OracleConnection": "User Id=RM98974;Password=100903;Data Source=oracle.fiap.com.br:1521/orcl"
+  },
   "AllowedHosts": "*"
 }
